@@ -1,3 +1,10 @@
+Mon Oct 06 17:47:26 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: during some operations we were unnecessairly
+	  converting the rop only to wipe it, so add a no_convert version
+	  of the extra type function (affected are division and mod in case
+	  rop was of a different type)
+
 Mon Oct 06 17:00:38 2003  George Lebl <jirka@5z.com>
 
 	* lib/misc/misc.gel: add Identity function
